--- a/bookstyle.css
+++ b/bookstyle.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     border: none;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family:"Enriqueta-Medium";
   }
   @font-face {
     font-family:"AbhayaLibre-ExtraBold";
@@ -175,13 +175,36 @@
     height: 100%;
   }
   .subheader{
-      text-align: center;
-      margin-bottom: 10px;
-      width: 100%;
-    }
+    text-align: center;
+    width: 100%;
+  }
+  .contact{
+    margin-top: 25%;
+    margin-bottom: 10px;
+    font-family: "Enriqueta-Medium";
+  }
+  .socials{
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    grid-template-rows: 100%;
+    margin-top: 20px;
+  }
+  .pic{
+    object-fit: cover;
+    width:40%;
+    margin: auto;
+    margin-top: 10px;
+  }
+  .pic:hover{
+    object-fit: cover;
+    width:45%;
+    margin: auto;
+    cursor: pointer;
+  }
   .left-sidebar{
     grid-area: left-sidebar;
     background-color:#1d1d1d;
+    z-index: 0;
   }
   .right-sidebar{
     grid-area: right-sidebar;
